--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/favicon cm.png"/>
     <link rel="apple-touch-icon" href="assets/apple-touch-icon.png"/>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/main.css">
     
 </head>
 <body>
